fixed images on safari, made nav sticky

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -39,20 +39,19 @@ a:hover {
 header {
 	text-align: center;
 	font-family: "BatonTurboWeb";
-	// position: fixed;
-	// top: 0%;
-	// position: -webkit-sticky;
+	position: fixed;
+	top: 0%;
+	position: -webkit-sticky;
 	z-index: 2;
 	width: 100%;
-	// height: 120px;
-	// border:  1px solid red;
+	background: #000000;
 	max-width: 1200px;
-	margin: 20px auto;
 	
 	ul {
 		display: flex;
 		flex-direction: row;
 		justify-content: space-between;
+		margin-top: 20px;
 		a {
 			text-decoration: none;
 			color: white;
@@ -141,11 +140,13 @@ header {
 
 .hero-wrap {
 	width: 100%;
+	height: 80vh;
 	position: relative;
 	margin-bottom: 20px;
 
 	.galleria-remixed {
-
+		position: absolute;
+		top: 18%;
 		color: white;
 		font-size: 1.8rem;
 		font-family: "BatonTurboWeb";
@@ -158,6 +159,8 @@ header {
 	}
 
 		.hero-blurb {
+			position: absolute;
+			top: 24%;
 			width: 100%;
 			padding: 10px;
 			margin: auto;
@@ -283,6 +286,7 @@ header {
 			img {
 				width: 100%;
 				padding: 5px;
+				align-self: center;
 			}
 
 			p {
@@ -316,10 +320,6 @@ header {
 	}
 
 
-}
-
-.padding {
-	// padding: 50px;
 }
 
 .announcements {
@@ -583,6 +583,10 @@ footer {
 	}
 }
 
+#owners, #announcements {
+	margin-bottom: 60px;
+}
+
 
 ////////Media Queries///////
 
@@ -593,13 +597,16 @@ footer {
 	}
 
 	.hero-wrap {
+		height: 80vh;
 		.galleria-remixed {
 			width: 20%;
+			top: 12%;
 			position: absolute;
 			font-size: 2rem;
 		}
 		.hero-blurb {
 			align-items: center;
+			top: 14%;
 			
 			.text-wrap-hero {
 				margin-top: 40px;
@@ -625,6 +632,7 @@ footer {
 	.building-nav {
 		padding: 10px;
 		.build-wrap {
+			width: 100%;
 			.bld-200, .bld-300 {
 				width: 51%;
 				font-size: 2rem;
@@ -633,7 +641,7 @@ footer {
 	
 			.bld-img-wrap {
 				flex-direction: row;
-				width: 33%;
+				width: 33.33%;
 				margin-left: 10px;
 			}
 
@@ -682,8 +690,8 @@ footer {
 
 			a {
 				position: absolute;
-				left: 33%;
-				top: 86%;
+				left: 32%;
+				top: 86%;	
 			}
 			h4 {
 				font-size: 1.3rem;
